[tool.poetry]
name = "tvsched"
version = "0.1.0"
description = ""
authors = ["astsu <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.27"}
asyncpg = "^0.25.0"
python-dotenv = "^0.19.2"
pydantic = "^1.8.2"
PyJWT = "^2.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
